k8s/lunch-menu-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: menu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: "/api/(.*)"
        backend:
          serviceName: menu-deployment
          servicePort: 8000
      - path: /(.*)
        backend:
          serviceName: menu-deployment
          servicePort: 80
